# multall-turbomachinery-design

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOVER.md  PROMPT_FOR_NEXT_SESSION.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: development_roadmap.md  session_summary_20250129.md  session_summary_20250129_session2.md  source_attribution.md
examples/: meangen_example.py  multall_example.py  stagen_example.py
examples/configs/: compressor_config.json  multistage_turbine.json  turbine_config.json  velocity_triangle.json
multall_turbomachinery_design/: __init__.py
multall_turbomachinery_design/cad/: __init__.py  blade_cad.py
multall_turbomachinery_design/cli/: __init__.py  main.py
multall_turbomachinery_design/meangen/: __init__.py  blade_geometry.py  data_structures.py  gas_properties.py  io_handler.py  mean_line_solver.py  stream_surface.py  velocity_triangles.py
multall_turbomachinery_design/multall/: __init__.py  data_structures.py  flux.py  gas_properties.py  inverse_design.py  io_handler.py  mixing_plane.py  postprocessing.py  solver.py  time_stepping.py  viscous.py
multall_turbomachinery_design/stagen/: __init__.py  blade_profile.py  data_structures.py  grid_generator.py  io_handler.py  projection.py  solver.py
multall_turbomachinery_design/ui/: __init__.py  main_window.py  project_manager.py  styles.py
multall_turbomachinery_design/ui/panels/: __init__.py  meangen_panel.py  multall_panel.py  stagen_panel.py
multall_turbomachinery_design/ui/widgets/: __init__.py  parameter_input.py  result_display.py
multall_turbomachinery_design/utils/: __init__.py  batch.py  export.py  units.py
multall_turbomachinery_design/visualization/: __init__.py  blade_plots.py  convergence_plots.py  flow_plots.py  velocity_triangle.py
tests/: __init__.py  test_cad.py  test_cli.py  test_import.py  test_meangen_advanced.py  test_meangen_basic.py  test_meangen_io.py  test_meangen_solver.py  test_multall_basic.py  test_multall_flux.py  test_multall_inverse_design.py  test_multall_mixing_plane.py  test_multall_postprocessing.py  test_multall_viscous.py  test_stagen_blade_profile.py  test_stagen_data_structures.py  test_stagen_grid.py  test_stagen_io.py  test_stagen_projection.py  test_stagen_solver.py  test_ui_components.py  test_ui_edge_cases.py  test_ui_integration.py  test_ui_widgets.py  test_ui_workflow.py  test_utils.py  test_visualization.py
