[project]
name = "multall-turbomachinery-design"
version = "0.1.0"
description = "MULTALL 渦輪機械設計系統 - Python/PySide6 實現"
readme = "README.md"
requires-python = ">=3.14"
license = {text = "MIT"}
authors = [
    {name = "LostSunset", email = "noreply@github.com"}
]
keywords = ["turbomachinery", "cfd", "design", "turbine", "compressor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyside6>=6.8.0",
    "numpy>=2.2.0",
    "scipy>=1.15.0",
    "matplotlib>=3.10.0",
]

[project.optional-dependencies]
# CAD 依賴暫時禁用，因為 CadQuery 尚未支援 Python 3.14
# 當 CadQuery 發布支援 Python 3.14 的版本後，取消下面的註釋：
# cad = [
#     "cadquery>=2.4.0",
# ]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP009"]  # UP009: 保留 UTF-8 編碼宣告以確保跨平台相容性

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=multall_turbomachinery_design --cov-report=term-missing"

[tool.mypy]
python_version = "3.14"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
