[project]
name = "multall-turbomachinery-design"
version = "0.1.0"
description = "MULTALL 渦輪機械設計系統 - Python/PySide6 實現"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "LostSunset", email = "noreply@github.com"}
]
keywords = ["turbomachinery", "cfd", "design", "turbine", "compressor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pyside6>=6.7.0",
    "numpy>=2.0.0",
    "scipy>=1.13.0",
    "matplotlib>=3.9.0",
]

[project.scripts]
multall = "multall_turbomachinery_design.cli:main"

[project.gui-scripts]
multall-gui = "multall_turbomachinery_design.ui:main"

[project.optional-dependencies]
# CAD 功能需要 Python 3.12 或 3.13（CadQuery 尚未支援 Python 3.14+）
cad = [
    "cadquery>=2.4.0; python_version < '3.14'",
]
# 蒸汽性質計算
steam = [
    "iapws>=1.5.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]
all = [
    "multall-turbomachinery-design[cad,steam]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "UP009"]  # UP009: 保留 UTF-8 編碼宣告以確保跨平台相容性

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=multall_turbomachinery_design --cov-report=term-missing"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
